# sorane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cbom.json  docs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
design/: access-logs.md  ai-content-disclosure.md  astro-rust-backend.md  content-import.md  diagram-formats.md  emergency-revision.md  findability-pack.md  i18n.md  markup-interchange.md  okf-profile-0.3-draft.md  quality-gates.md  security-remediation-report.md  vivliostyle-pdf-export.md
docs/: 2023-08-26-sorane.css  2023-08-26-sorane.html  2023-08-26.css  2023-08-26.html  2023-08-27-i18n.css  2023-08-27-i18n.html  2023-08-27-why.css  2023-08-27-why.html  2023-08-29-ivs.css  2023-08-29-ivs.html  2023-08-31-sw.css  2023-08-31-sw.html  2023-09-02-build.css  2023-09-02-build.html  2023-09-02-chatdev.css  2023-09-02-chatdev.html  2023-09-02-wallet.css  2023-09-02-wallet.html  2023-09-03-z3.css  2023-09-03-z3.html  2023-09-05-tfrv.css  2023-09-05-tfrv.html  2023-09-06-aisd.css  2023-09-06-aisd.html  2023-09-07-tsfrv.css  2023-09-07-tsfrv.html  2023-09-08-tsrfv.css  2023-09-08-tsrfv.html  2023-09-09-ng.css  2023-09-09-ng.html  2023-09-10-mrnakano.css  2023-09-10-mrnakano.html  2023-09-11-911.css  2023-09-11-911.html  2023-09-12-oi.css  2023-09-12-oi.html  2023-09-13-iphone15.css  2023-09-13-iphone15.html  2023-09-14-unity.css  2023-09-14-unity.html  (+19 more)
posts/: 2023-08-26-sorane.md  2023-08-27-i18n.md  2023-08-27-why.md  2023-08-29-ivs.md  2023-08-31-sw.md  2023-09-02-build.md  2023-09-02-chatdev.md  2023-09-02-wallet.md  2023-09-03-z3.md  2023-09-05-tfrv.md  2023-09-06-aisd.md  2023-09-07-tsfrv.md  2023-09-08-tsrfv.md  2023-09-09-ng.md  2023-09-10-mrnakano.md  (+12 more)
rust/sorane-astro-backend/: Cargo.toml
rust/sorane-astro-backend/profile/: sorane-okf-0.2.schema.json  sorane-okf-0.3.schema.json
rust/sorane-astro-backend/src/: config_security.rs  content_quality.rs  dcat.rs  diagram.rs  directory_index.rs  faq.rs  glossary.rs  heading_slug.rs  i18n.rs  i18n_validate.rs  lang_mixing.rs  lib.rs  main.rs  markdown_sections.rs  okf_validate.rs  open_data.rs  open_data_validate.rs  redirect.rs  reference.rs  revision.rs  safe_url.rs  search.rs  search_build.rs  search_chunker.rs  search_embed.rs  search_embed_cmd.rs  search_index_cmd.rs  search_ruri.rs  search_store.rs  search_walk.rs  term_links.rs  unsafe_links.rs  validate.rs
(+246 files in other folders)
