[package]
name = "sorane-astro-backend"
version = "0.1.0"
edition = "2021"
description = "JSON contract backend for @sorane/astro OKF artifact emission"
license = "MIT"

[[bin]]
name = "sorane-astro-backend"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
jsonschema = { version = "0.29", default-features = false }
once_cell = "1"
regex = "1"
pulldown-cmark = "0.13"