[package]
name = "sorane-astro-backend"
version = "0.1.0"
edition = "2021"
description = "JSON contract backend for @sorane/astro OKF artifact emission"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sorane-astro-backend"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
jsonschema = { version = "0.29", default-features = false }
once_cell = "1"
regex = "1"
pulldown-cmark = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { version = "1", default-features = false, features = ["zlib"] }
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]